[tool.poetry]
name = "lstar"
readme="README.md"
version = "0.2.6"
description = "Python implementation of lstar automata learning algorithm."
authors = ["Marcell J. Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
funcy = "^1.12"
attrs = "^19.1"
lazytree = "^0.3.0"
dfa = "^0.3.1"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"
pytest = "^4.6"
hypothesis = "^4.24"
pytest-xdist = "^1.28"
pytest-flake8 = "^1.0"

[build-system]
requires = ["poetry>=0.12.17"]
build-backend = "poetry.masonry.api"
