[tool.poetry]
name = "lstar"
readme="README.md"
version = "1.0.0"
description = "Python implementation of lstar automata learning algorithm."
authors = ["Marcell J. Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
funcy = "^1.12"
attrs = "^21.0.0"
lazytree = "^0.3.2"
dfa = "^4"

[tool.poetry.dev-dependencies]
pytest-cov = "^3"
pytest-sugar = "^0.9.2"
pytest = "^6.0.0"
hypothesis = "^6"
pytest-xdist = "^2.0.0"
pytest-flake8 = "^1"

[build-system]
requires = ["poetry>=0.12.17"]
build-backend = "poetry.masonry.api"
